--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 	<br/>
 	<button type="button" onclick="postFunction()">Post</button>
 	<button type="button" onclick="clearFunction()">Clear</button>
-	<button type="button" onclick="document.location='home.html'">Home</button>
+	<button type="button" onclick="document.location='index.html'">Home</button>
 	
 </body>
 </html>
