--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <div class="mother">
         <div class="head">
             <div>
-                <h1><a href="index.html">Home</a></h1>
+                <h1><a href="index.html" class="home">Home</a></h1>
             </div>
 
             <div>
-                <h1><a href="game.html">Game</a></h1>
+                <h1><a href="game.html" class="game">Game</a></h1>
             </div>
 
             <div>
-                <h1><a href="blog.html">Blog</a></h1>
+                <h1><a href="blog.html" class="blog">Blog</a></h1>
             </div>
 
             <div>
-                <h1><a href="recipe.html">Recipe</a></h1>
+                <h1><a href="recipe.html" class="recipe">Recipe</a></h1>
             </div>
 
             <div>
-               <h1><a href="login.html" class="buttonStyle3">Login</a></h1> 
+               <h1><a href="login.html">Login</a></h1> 
             </div>
         </div>
 
