--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 </div>
                 <div><h2>Projects in progress: VR Game for Health</h2></div>
                 <div class="contract">
-                    <h2>Contact: <a href="https://www.facebook.com/panya.peem">FACEBOOK</a></h2>
-                    <h2>Tel: 0931292543</h2>
+                    <!-- <h2>Contact: <a href="https://www.facebook.com/panya.peem">FACEBOOK</a></h2>
+                    <h2>Tel: 0931292543</h2> -->
                     <h2>Gmail: panpuk.sutthi@mail.kmutt.ac.th</h2>
-                </div>
+                </div> 
                 <!-- <hr> -->
             
             </div>
@@ -67,28 +67,48 @@
                     <img src="./pic/62120501025pic.jpeg" alt="62120501025">
                 </div>
             </div>
-
-            
-
         </div>
         <hr>
         <div class="skill-head">
-            <h1>Skill</h1>
+            <h1>Skill</h1>        
+            <div class="skill">
+                <div class="discord">
+                    <h2>Discord Bot</h2>
+                    <h2>สามาถตกแต่งServer Discord และใช้งาน Bot Discord เพื่อความสดวกสบายและความสวยงาม</h2>
+                </div>
+                <div class="html">
+                    <h2>HTML/CSS/JS</h2>
+                    <h2>ออกแบบเว็บไซต์ได้ในระดับดี</h2>
+                </div>
+                <!-- <div>
+                    <h2></h2>
+                </div> -->
+            </div>
+            <div class="video">
+                <div>
+                    <h2>Project Study</h2>
+                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Os6TxPNblIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <hr>
         </div>
-        <div class="skill">
-            <div class="discord">
-                <h2>Discord Bot</h2>
-                <h2>สามาถตกแต่งServer Discord และใช้งาน Bot Discord เพื่อความสดวกสบายและความสวยงาม</h2>
+        <div class="footer">
+            <div class="one">
+                <h1>Contact</h1>
+                <h2><a href="https://www.facebook.com/panya.peem">Facebook</a></h2>
+                <h2><a href="https://www.youtube.com/embed/Os6TxPNblIQ">YouTube</a></h2>
+                <h2>Tel: 0931292543</h2>
+                <!-- <h2><a href="https://mail.google.com/mail/u/0/#inbox?compose=new">Gmail</a></h2> -->
             </div>
-            <div class="html">
-                <h2>HTML/CSS/JS</h2>
-                <h2>ออกแบบเว็บไซต์ได้ในระดับดี</h2>
+
+            <!-- <div class="two">
+                <h1>asdfghjkl;</h1>
             </div>
-            <!-- <div>
-                <h2></h2>
+
+            <div class="three">
+                <h1>asdfghjkl;</h1>
             </div> -->
         </div>
-
     </div>
 </body>
 </html>
